[package]
name = "a-bucket-bot"
version = "0.1.0"
authors = ["Layl <LaylConway@users.noreply.github.com>"]
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "0.4"
crc = "1.2"
log = "0.3.6"
log4rs = { version = "0.4.7", features = ["toml"] }
toml = "0.1.27"
boiler = "0.1.1"
boiler-generated = "0.1.0"
